# ntcp2

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile
cmake/: BuildCryptoPP.cmake  BuildNoiseC.cmake  FindNoiseC.cmake
src/: CMakeLists.txt
src/crypto/: aes.h  constants.h  ed25519.h  elgamal.h  hash.h  key.h  meta.h  rand.h  sign.h
src/crypto/key/: aes.h  ed25519.h  elgamal.h  x25519.h
src/exception/: exception.h
src/ntcp2/: bytes.h  messenger.h  meta.h  noise.h  role.h  time.h
src/ntcp2/blocks/: block.h  date_time.h  meta.h  options.h  padding.h  router_info.h
src/ntcp2/router/: address.h  certificate.h  identity.h  info.h  mapping.h  meta.h
src/ntcp2/router/meta/: address.h  certificate.h  identity.h  info.h  mapping.h
src/ntcp2/session_confirmed/: meta.h  session_confirmed.h
src/ntcp2/session_created/: kdf.h  message.h  meta.h  options.h  session_created.h
src/ntcp2/session_request/: kdf.h  meta.h  options.h  session_request.h
tests/slow_tests/: CMakeLists.txt  main.cc
tests/slow_tests/crypto/: elgamal.cc
tests/unit_tests/: CMakeLists.txt  main.cc
tests/unit_tests/crypto/: aes.cc  ed25519.cc  elgamal.cc
tests/unit_tests/mock/: handshake.h
tests/unit_tests/mock/crypto/: elgamal.h
tests/unit_tests/mock/router/: info.h
tests/unit_tests/ntcp2/: bytes.cc  meta.cc
tests/unit_tests/ntcp2/blocks/: date_time.cc  options.cc  padding.cc  router_info.cc
tests/unit_tests/ntcp2/router/: address.cc  certificate.cc  identity.cc  info.cc  mapping.cc
tests/unit_tests/ntcp2/session_confirmed/: session_confirmed.cc
tests/unit_tests/ntcp2/session_created/: kdf.cc  session_created.cc
tests/unit_tests/ntcp2/session_request/: kdf.cc  session_request.cc
